--- a/u1s11.html
+++ b/u1s11.html
@@ -151,11 +151,11 @@
 <inline  class="solution">$4,590</inline ></p>
 <p>Gross Income (Wages + Interest): ____________________
 <inline  class="solution">$60,700</inline ></p>
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<p>Adjusted Gross Income \((\text{Wages} + \text{Interest} - \text{Tax deferred contributions})\): ____________________
 <inline  class="solution">$58,200</inline ></p>
 <p>Amount of Standard Deduction: ____________________
 <inline  class="solution">$12,000</inline ></p>
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<p>Taxable Income \((\text{Adjusted Gross Income} - \text{Standard Deduction})\): ____________________
 <inline  class="solution">$46,200</inline ></p>
 <p>Amount of Federal Taxes owed: _____________________
 <inline  class="solution">$6,103.50</inline ></p>
@@ -250,11 +250,11 @@
 
 <p>Gross Income (Wages + Interest): ____________________
 <inline class="solution">$121,400</inline></p>
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<p>Adjusted Gross Income \((\text{Wages} + \text{Interest} - \text{Tax deferred contributions})\): ____________________
 <inline class="solution">$116,400</inline></p>
 <p>Amount of Standard Deduction: ____________________
 <inline class="solution">$12,000</inline></p>
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<p>Taxable Income \((\text{Adjusted Gross Income} - \text{Standard Deduction})\): ____________________
 <inline class="solution">$104,400</inline></p>
 <p>Amount of Federal Taxes owed: _____________________
 <inline class="solution">$19,345.50</inline></p>
@@ -380,29 +380,29 @@
 <li>Suppose Tyler has $150,050 of income from work and is not self-employed. How much will Tyler have to pay in FICA taxes?</li>
 
 <p class="solution"> \(\begin{equation}
-       . 0765(128,700)= \$ 9,845.55
+        .0765(128700)= \$ 9845.55
         \end{equation} \)</p>
 
         <p class="solution"> \(\begin{equation}
-                .0145(21,350)=\$309.58
+                .0145(21350)=\$309.58
                 \end{equation} \)</p>
-                <p class="solution"> \( \begin{equation} \$ 9,845.55 + \$ 309.58 = \$ 10,155.13 \end{equation} \) </p>
+                <p class="solution"> \( \begin{equation} \$ 9845.55 + \$ 309.58 = \$ 10155.13 \end{equation} \) </p>
 
 <li>Suppose Dylan has $35,000 of income from work and is not self-employed. How much will Dylan have to pay in FICA taxes?</li>
 
 <p class="solution"> \(\begin{equation}
-        .0765(35,000)=\$ 2,677.50
+        .0765(35000)=\$ 2677.50
         \end{equation} \)</p>
 
 <li>Suppose Alysa has $130,000 of net earnings from work and is self-employed. How much will Alysa have to pay in FICA taxes?</li>
 
 <p class="solution"> \(\begin{equation}
-        .153(128,700)=\$19,691.10
+        .153(128700)=\$19691.10
         \end{equation} \)</p>
         <p class="solution"> \(\begin{equation}
                 .029(1300)=\$37.70
                 \end{equation} \)</p>
-                <p class="solution"> \( \begin{equation} \$ 19,691.10 + \$ 37.70 = \$ 19,728.80 \end{equation} \) </p>
+                <p class="solution"> \( \begin{equation} \$ 19691.10 + \$ 37.70 = \$ 19728.80 \end{equation} \) </p>
 
 </ol>
 <p style="page-break-before: always"></p>
@@ -415,13 +415,13 @@
 <p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________</p></p>
 <inline class="solution">$1,109.25</inline></p>
 
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<p>Adjusted Gross Income \((\text{Wages} + \text{Interest} - \text{Tax deferred contributions})\): ____________________
 <inline class="solution">$14,500</inline>
 
 <p>Amount of Standard Deduction: ____________________
 <inline class="solution">$12,000</inline></p>
 
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<p>Taxable Income \((\text{Adjusted Gross Income} - \text{Standard Deduction})\): ____________________
 <inline class="solution">$2,500</inline></p>
 
 <p>Amount of Federal Taxes owed: _____________________
@@ -518,13 +518,13 @@
 <p>You must pay 7.65% of your wages for Social Security and Medicare taxes. Calculate your Social Security/Medicare taxes for 2018. ____________________
 <inline class="solution">$6,502.50</inline></p>
 
-<p>Adjusted Gross Income (Wages + Interest – Tax-deferred contributions): ____________________
+<p>Adjusted Gross Income \((\text{Wages} + \text{Interest} -  \text{Tax deferred contributions})\): ____________________
 <inline class="solution">$85,000</inline></p>
 
 <p>Amount of Standard Deduction: ____________________
 <inline class="solution">$24,000</inline></p>
 
-<p>Taxable Income (Adjusted Gross Income – Standard Deduction): ____________________
+<p>Taxable Income \((\text{Adjusted Gross Income} - \text{Standard Deduction})\): ____________________
 <inline class="solution">$61,000</inline></p>
 
 <p>Taxes owed from table below: _____________________
