--- a/u1s3.html
+++ b/u1s3.html
@@ -184,7 +184,7 @@
                             <p class="solution"> \( \frac{420}{150}=\frac{14}{5}\)</p> 
                       </li>
                       <li>What is Jack’s monthly cash flow?
-                            <p class="solution"> \(\text{Income} - \text{Expenses}= $2500-$1995=$505\)</p> 
+                            <p class="solution"> \(\text{Income} - \text{Expenses}= \$2500-\$1995=\$505\)</p> 
                       </li>
                       <li>If Jack’s landlord raises his rent to $700 per month, what percent increase does this represent?
                             <p class="solution"> \( \frac{700-650}{650}=\frac{50}{650}=.0769=7.69\% \)</p> 
@@ -247,10 +247,10 @@
         
 
           <li>What is Sandy’s monthly cash flow?
-            <p class="solution"> \(1625-1883.33= -258.33\) dollars </p>
+            <p class="solution"> \(1625-1883.33= -\$258.33\) </p>
           </li>
           <li>If Sandy receives a raise at her job so that she is making $12.00/hour and increases her number of hours worked to 30 hours per week, what will be her total monthly income? Assume there are 4 weeks in a month.
-              <p class="solution"> \($12 \cdot 30 \cdot 4 = $1440\) per month </p>
+              <p class="solution"> \(\$12 \cdot 30 \cdot 4 = \$1440\) per month </p>
           </li>
           <li>Sandy’s new income from working due to her raise represents what percent increase in her previous income from working?
           <p class="solution">\(\frac{\text{New }-\text{ Original}}{\text{Original}}=\frac{1140-1125}{1125}=0.28=28\%\)</p>
@@ -326,7 +326,7 @@
               <li>
                   When you talk to the Honda salesman, he agrees to sell the Civic to you at a 15% discount off the retail price? How much will you pay in cash for the car with the discount applied?
                   <p class="solution">\(20375\cdot.15=3056.25\)</p>
-                  <p class="solution"> \(20375-3056.25=$17318.75\)</p>
+                  <p class="solution"> \(20375-3056.25=\$17318.75\)</p>
 
               </li>
 
@@ -447,17 +447,17 @@
                   </table>
                   <p style="page-break-before: always"></p>
                 <li> What would your healthcare costs be for the year if you choose Plan A? Assume that the copays do not count towards the deductible.
-                        <p class="solution"> \(25+45+500+300+150+1264+45+225+25=$2379 \)</p>
-                        <p class="solution"> Also you have to pay monthly premiums: \((133)(12)=$1596\) </p>
-                        <p class="solution"> Total: \(2379+1596=$3975\) </p>
+                        <p class="solution"> \(25+45+500+300+150+1264+45+225+25=\$2379 \)</p>
+                        <p class="solution"> Also you have to pay monthly premiums: \((133)(12)=\$1596\) </p>
+                        <p class="solution"> Total: \(2379+1596=\$3975\) </p>
                 </li>
                 <li> What would your healthcare costs be for the year if you choose Plan B?
-                    <p class="solution"> \(256+345+899+520.20+512+2528+50+51.20+51.20=$5212.60 \) but the out-of-pocket maximum is \($2500\)</p>
-                    <p class="solution"> Monthly premiums: \((84)(12)=$1008\) </p>
-                    <p class="solution"> Total: \(2500+1008=$3508\) </p>
+                    <p class="solution"> \(256+345+899+520.20+512+2528+50+51.20+51.20=\$5212.60 \) but the out-of-pocket maximum is \(\$2500\)</p>
+                    <p class="solution"> Monthly premiums: \((84)(12)=\$1008\) </p>
+                    <p class="solution"> Total: \(2500+1008=\$3508\) </p>
                 </li>
                 <li>What would your healthcare costs be if you have no insurance?
-                    <p class="solution"> \(256+345+3500+2560+12640+250+256+256=$20063\) </p>
+                    <p class="solution"> \(256+345+3500+2560+12640+250+256+256=\$20063\) </p>
                 </li>
             </ol>
          
