--- a/u1s5.html
+++ b/u1s5.html
@@ -197,29 +197,29 @@
 
         <li>	Evaluate \(I=\operatorname{Prt} \text { when } P=2000, r=0.045, \text { and } t=\frac{11}{12}\)
                 <p class="solution"> \(I=2000 \cdot 0.045 \cdot \frac{11}{12}\)</p>
-                <p class="solution"> \(I=$82.50\)</p></li>
+                <p class="solution"> \(I=\$82.50\)</p></li>
 
         <li>	Find the simple interest earned on $3000 at an annual interest rate of 3.75% for 4 years.  Use the simple interest formula \(I=Prt\) where \(P\) is the principle invested, \(r\) is the annual interest rate in decimal form, and \(t\) is the number of years.
                 <p class="solution"> \(I=3000 \cdot 0.0375 \cdot 4\)</p>
-                <p class="solution"> \(I=$450\)</p></li>
+                <p class="solution"> \(I=\$450\)</p></li>
 
         <li>	Evaluate \(A=P\left(1+\frac{r}{n}\right)^{n t} \text { when } P=2000, r=0.045, n=12, \text { and } t=\frac{11}{12}\)
             <p class="solution"> \(A=2000\left(1+\frac{.045}{12}\right)^{12 \cdot \frac{11}{12}}\)</p>
-            <p class="solution"> \($2084.06\)</p></li>
+            <p class="solution"> \(\$2084.06\)</p></li>
         
         <li>Find the accumulated amount when $3000 is invested for 4 years at a 3.75% interest rate compounded monthly.  Use the compound interest formula \(A=P\left(1+\frac{r}{n}\right)^{n t}\) where \(P\) is the principle invested, \(r\) is the annual interest rate in decimal form, \(t\) is the number of years, and \(n\) is the number of compounding periods in a year.
             <p class="solution"> \(A=3000\left(1+\frac{.0375}{12}\right)^{12 \cdot 4}\)</p>
-            <p class="solution"> \(A=$3484.69\)</p></li>
+            <p class="solution"> \(A=\$3484.69\)</p></li>
 
         <li>	Evaluate \(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n t}-1\right]}{\left(\frac{R}{n}\right)}  \text { when } P M T=\$ 250, R=0.02, t=20, \text { and } n=12\)
             <p class="solution"> \(A=\frac{250\left[\left(1+{\displaystyle\frac{.02}{12}}\right)^{12\ast20}-1\right]}{\left({\displaystyle\frac{.02}{12}}\right)}\)</p>
-            <p class="solution"> \(A=$73,699.21\)</p>
+            <p class="solution"> \(A=\$73699.21\)</p>
         </li>
       
 
         <li>	Find the accumulated amount when $1000 is invested every month for 3.5 years at a 3% interest rate compounded monthly.  Use the savings plan formula  \(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n t}-1\right]}{\left(\frac{R}{n}\right)}\) where \(PMT\) is the monthly payment, \(R\) is the annual percentage rate, \(t\) is the number of years, and \(n\) is the number of compounding periods per year.
           <p class="solution"> \(A=\frac{1000\left[\left(1+{\displaystyle\frac{.03}{12}}\right)^{12\ast3.5}-1\right]}{\left({\displaystyle\frac{.03}{12}}\right)}\)</p>
-          <p class="solution"> \(A=$44,226.03\)</p>
+          <p class="solution"> \(A=\$44226.03\)</p>
         </li>
 
         <li>Evaluate \(a^{2}+b^{2}=c^{2} \text { when } a=5 \text { and } b=12\)
