--- a/u1s8.html
+++ b/u1s8.html
@@ -176,19 +176,19 @@
 <li>How much did Ben have in his account at age 30?</li>
 
 <p class="solution"> \(\begin{equation}
-    A=\frac{2000 \cdot\left[\left(1+\frac{.07}{1}\right)^{11 \cdot 1}-1\right]}{(.07 / 1)}= \$ 31,567.20
+    A=\frac{2000 \cdot\left[\left(1+\frac{.07}{1}\right)^{11 \cdot 1}-1\right]}{(.07 / 1)}= \$ 31567.20
     \end{equation} \)</p>
 
 <li>How much did Ben have in his account at age 65?</li>
 
 <p class="solution"> \(\begin{equation}
-    A=31,567.20\left(1+\cdot \frac{07}{1}\right)^{35}= \$ 337,029.78
+    A=31567.20\left(1+ \frac{.07}{1}\right)^{35}= \$ 337029.78
     \end{equation} \)</p>
 
 <li>How much did Arthur have in his account at age 65?</li>
 
 <p class="solution"> \(\begin{equation}
-    A=\frac{2000 \cdot\left[\left(1+\frac{.07}{1}\right)^{25 \cdot 1}-1\right]}{(.07 / 1)} = \$126,498.08
+    A=\frac{2000 \cdot\left[\left(1+\frac{.07}{1}\right)^{25 \cdot 1}-1\right]}{(.07 / 1)} = \$126498.08
     \end{equation} \)</p>
 
 
@@ -199,7 +199,7 @@
 
 <p class="solution"> \(\begin{equation}
         A=300 \cdot \frac{\left[\left(1+\frac{.065}{12}\right)^{12 \cdot 40}-1\right]}{(.065 / 12)}
-        \end{equation}= $ 685,085.68\)</p>
+        \end{equation}= \$ 685085.68\)</p>
 
    
 
@@ -250,11 +250,11 @@
      <li>How much should you deposit at the end of each year into an IRA (Individual Retirement Account) that pays 5% compounded yearly to have $1 million when you retire in 50 years?</li>   
 
      <p class="solution"> \(\begin{equation}
-            1,000,000=P M T \cdot \frac{\left[\left(1+\frac{.05}{1}\right)^{1 \cdot 50}-1\right]}{\left(\frac{.05}{1}\right)}
+            1000000=P M T \cdot \frac{\left[\left(1+\frac{.05}{1}\right)^{1 \cdot 50}-1\right]}{\left(\frac{.05}{1}\right)}
             \end{equation} \)</p>
 
             <p class="solution"> \(\begin{equation}
-                    1,000,000= PMT \cdot 209.3479957
+                    1000000= PMT \cdot 209.3479957
                     \end{equation} \)</p>
 
                     <p class="solution"> \(\begin{equation}
@@ -264,11 +264,11 @@
      <p>How much interest will you have earned?</p>
 
      <p class="solution"> \(\begin{equation}
-            4776.74 \cdot 50= \$ 238,837
+            4776.74 \cdot 50= \$ 238837
             \end{equation} \)</p>
 
             <p class="solution"> \(\begin{equation}
-                    1,000,000-238,837= \$ 761,163
+                    1000000-238837= \$ 761163
                     \end{equation} \)</p>
 
      
