--- a/u1s9.html
+++ b/u1s9.html
@@ -185,20 +185,20 @@
 </li>
 
 <li>Calculate the total amount paid over the life of the loan: ____________________
-  <p class="solution"> \(512.81*12*5=$30,768.60\)</p>
+  <p class="solution"> \(512.81*12*5=\$30768.60\)</p>
     </li>
     <p style="page-break-before: always"></p>
     <li>Now suppose you want to buy this same car, but you started saving for it five years ago.  You just put the money aside in a cookie jar under your bed. How much money would you have needed to save per month for the last five years to accumulate enough money to buy the car without a loan?
 
     <p>Monthly savings needed: ____________________</p>
-    <p class="solution"> \(25,345/60=$422.42\)</p>
+    <p class="solution"> \(25345/60=\$422.42\)</p>
   </li>
 
     <li>What if you had been saving for the past five years by making monthly deposits in a mutual fund that effectively paid 5% interest on your investment? How much money would you have needed to invest per month for the last five years to accumulate enough money to buy the car? Use the annuity formula where A is the price of your car.  Solve for the PMT. Show formula and calculations used.
 
     <p>Monthly savings needed: ____________________</p>
     <p class="solution">\(A=P M T \times \frac{\left[\left(1+\frac{R}{n}\right)^{n T}-1\right]}{\left(\frac{R}{n}\right)}\) </p>
-    <p class="solution">\(25,345=PMT\frac{\left[\left(1+{\displaystyle\frac{.05}{12}}\right)^{12\ast5}-1\right]}{\left({\displaystyle\frac{.05}{12}}\right)}\)</p>
+    <p class="solution">\(25345=PMT\frac{\left[\left(1+{\displaystyle\frac{.05}{12}}\right)^{12\ast5}-1\right]}{\left({\displaystyle\frac{.05}{12}}\right)}\)</p>
     <p class="solution">$372.69</p>
   </li>
 
