--- a/u2s4.html
+++ b/u2s4.html
@@ -256,7 +256,7 @@
 
 <p>A new Rasmussen Reports national telephone and online survey finds that 69% of Likely U.S. Voters think the United States is more exceptional than other nations. This is up significantly from 57% <a href= "http://www.rasmussenreports.com/public_content/politics/general_politics/february_2015/do_voters_believe_obama_loves_america" target="_blank">two years ago.</a> Just 20% disagree, while 10% are not sure. (Question wording:  Is the United States more exceptional than other nations?)</p>
 
-<p>The survey of 1,000 Likely Voters was conducted on February 6-7, 2017 by Rasmussen Reports. The margin of sampling error is +/- 3 percentage points with a 95% level of confidence. Field work for all Rasmussen Reports surveys is conducted by <a href="http://www.pulseopinionresearch.com/" target="_blank" >Pulse Opinion Research, LLC.</a> </p>
+<p>The survey of 1,000 Likely Voters was conducted on February 6-7, 2017 by Rasmussen Reports. The margin of sampling error is \(\pm 3\) percentage points with a 95% level of confidence. Field work for all Rasmussen Reports surveys is conducted by <a href="http://www.pulseopinionresearch.com/" target="_blank" >Pulse Opinion Research, LLC.</a> </p>
 
 <p>Source: <a href="http://www.rasmussenreports.com/public_content/politics/general_politics/february_2017/voters_still_see_america_as_a_special_place" target="_blank"> Rasmussen Reports Website Source</a></p>
 
@@ -282,7 +282,7 @@
 
 <p>For political surveys, census bureau data provides a starting point and a series of screening questions are used to determine likely voters. The questions involve voting history, interest in the current campaign, and likely voting intentions.</p>
 <p style="page-break-before: always"></p>
-<p><b>In a sample of 500 city voters, 45% said they will vote for Mr. Alpha, 51% said they will vote for Ms. Beta and 4% will vote for someone else. If the margin of error is +/-3 percentage points, can we say with confidence that Ms. Beta is ahead?</b></p>
+<p><b>In a sample of 500 city voters, 45% said they will vote for Mr. Alpha, 51% said they will vote for Ms. Beta and 4% will vote for someone else. If the margin of error is \(\pm 3\) percentage points, can we say with confidence that Ms. Beta is ahead?</b></p>
 
 
 
