--- a/u2s8.html
+++ b/u2s8.html
@@ -305,10 +305,10 @@
 
 
 <p>Standard Deviation:</p>
-<p class="solution">57.1 M</p>
+<p class="solution">$57.1 M</p>
 
 <p>Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">60.1 M</p>
+<p class="solution">$60.1 M</p>
 
 <p style="page-break-before: always"></p>
 
@@ -340,7 +340,7 @@
 <p class="solution"><img src="images/u2s8p2.png" width="40%" height="40%" alt="The box plot is titled Endorsements. The x-axis is in millions of dollars and goes from 0 to 100, counting by 10. The left whisker is at 2, the minimum number, and the right whisker is at 65, the maximum number. The box that is drawn contains the lower quartile at 9, the median at 19 and the upper quartile at 42." ></p>
 
 <p>Standard Deviation and Range Rule of Thumb for Standard Deviation:</p>
-<p class="solution">18.8 M and 15.8 M</p>
+<p class="solution">$18.8 M and $15.8 M</p>
 
 
 
