--- a/u2s3.html
+++ b/u2s3.html
@@ -214,7 +214,7 @@
 <ol>
 <p>Answer the following questions based on the graph.</p>
 <li>What would Katie’s total cost be if she played 12 games?  _________________</li>
-<p class="solution">8 + 3 * 12 = $44</p>
+<p class="solution">\(8 + 3 \cdot 12 = \$44\)</p>
 
 <li>If Katie paid $26.00 to golf, how many games did she play?  _______________</li>
 <p class="solution">6 games</p>
@@ -240,7 +240,7 @@
 <p>Study each of the pictured graphs and answer the questions that follow each graph.  Be sure to use a complete sentence in your answers where appropriate.</p>
 
 <p>
-    <img src="images/u2s3p1.png" width="75%" height="75%" alt="The graph is a scatter plot of points. The x-axis represents the hours spent studying  and goes from 0 to 7. The y-axis represents the percent increase in the math test score and goes from -6 to 8. The points plotted on the graph are (1,-1), (1,2), (2,2), (3,1), (3,5), (4,4), (5,7), (6,1) and (7,6). ">
+    <img src="images/u2s3p1.png" width="75%" height="75%" alt="The graph is a scatter plot of points. The x-axis represents the hours spent studying  and goes from 0 to 7. The y-axis represents the percent increase in the math test score and goes from -6 to 8. The points plotted on the graph are (1,-1), (1,2), (2,2), (3,1), (3,5), (4,4), (5,7), (6,1) and (7,6).">
 
 </p>
 <ol>
@@ -277,11 +277,11 @@
 <li>
     In 2011, one minute of prime-time television advertising time cost $110,000. The equation that models this situation is
 
-    <p>y=110000x</p>
+    <p>\(y=110000x\)</p>
 
     <p>where x is the number of advertising minutes and y is the cost of each advertisement.  The graph is a linear graph and is shown below.</p>
 
-    <img src="images/u2s3p2.png" alt="The graph is linear and increases from left to right. The x-axis represents the number of minutes in advertising time and goes from 0 to 10. The y-axis represents the cost of the advertisements and goes from 0 to 1,200,000. The graph is constructed according to the equation y=110,000x.">
+    <img src="images/u2s3p2.png" alt="The graph is linear and increases from left to right. The x-axis represents the number of minutes in advertising time and goes from 0 to 10. The y-axis represents the cost of the advertisements and goes from 0 to 1,200,000. The graph is constructed according to the equation y=110000x.">
 
     <ol>
 
@@ -293,7 +293,7 @@
 <p class="solution">A $500,000 ad is approximately 4.5 minutes long.</p>
 
 <li>What is the cost of a twelve-minute advertisement? How did you find this answer?</li>
-<p class="solution">y = 110,000 * 12 = $1,320,000</p>
+<p class="solution">\(y = 110000 \cdot 12 = $1320000\)</p>
 
 <li>The graph is increasing from left to right. In a complete sentence, explain this.</li>
 <p class="solution">As the number of advertising minutes increases, the cost of the ad increases.</p>
@@ -308,7 +308,7 @@
 <li>
     Green Bulk is an internet wholesaler where dried fruits and nuts can be bought in large quantities for use by grocery stores, gourmet markets, coffee shops, and other small businesses. The manager of one specialty store buys 20 cases of organic dried cranberries. Each case contains 25 pounds of dried cranberries.  The equation that models this situation is \(y=500-25x\) where x represents the number of cases of dried cranberries that are sold at the specialty store and y represents the number of pounds of dried cranberries that are still in stock at the specialty store. The graph is a linear graph and is shown below.
 
-    <img src="images/u2s3p3.png" alt="The graph is linear and decreases from left to right. The x-axis represents the number of cases of cranberries that are sold and goes from 0 to 24. the y-axis represents the number of pounds of cranberries still in stock and goes from 0 to 600. The line is constructed according to the equation y = 500-25x. Two points on the graph are (4,400) and (16,100)">
+    <img src="images/u2s3p3.png" alt="The graph is linear and decreases from left to right. The x-axis represents the number of cases of cranberries that are sold and goes from 0 to 24. the y-axis represents the number of pounds of cranberries still in stock and goes from 0 to 600. The line is constructed according to the equation 500-25x. Two points on the graph are (4,400) and (16,100)">
 
     <ol>
 
@@ -340,7 +340,7 @@
     <p>\(y=45000x-275000\)</p>
     <p>where x is the number of years she has worked and y represents her salary for each of the two options. The graph of this system is below.</p>
 
-    <img src="images/u2s3p4.png" alt="The graph is two linear equations, each one resenting one of the two options the graduate has for employment. the x-axis represents the time in years and goes from 0 to 30. The y-axis rpresents the accumulated profit and goeas from -300,000 to 1,000,000. The two lines are constructed according to the given equations and intersect at the point (18, 550,000). ">
+    <img src="images/u2s3p4.png" alt="The graph is two linear equations, each one representing one of the two options the graduate has for employment. The x-axis represents the time in years and goes from 0 to 30. The y-axis represents the accumulated profit and goes from -300,000 to 1,000,000. The two lines are constructed according to the given equations and intersect at the point (18.33, 550,000). ">
 
     <ol>
 <li>What does the black line (Option A) on this graph represent? What does the gray line (Option B) on this graph represent? Use complete sentences in your answer.</li>
