--- a/u2review.html
+++ b/u2review.html
@@ -273,7 +273,7 @@
     <li>Compare the Japan boys to the South Korea boys.  Who scored higher?  </li>
     <p class="solution">South Korea boys</p>
     <li>What is the difference in the boys’ scores for Great Britain and Denmark?</li>
-    <p class="solution">517 - 502 = 15 points</p>
+    <p class="solution">\(517 - 502 = 15\) points</p>
 
 </ol>
 </li>
@@ -286,7 +286,7 @@
 <p style="page-break-before: always"></p>
 
 <li>Make a frequency table for the following data set.  Final grades of 20 students in a math class:	</li>
-<p>ACCBDFCCBBADFBCCBCCD</p>
+<p>A, C, C, B, D, F, C, C, B, B, A, D, F, B, C, C, B, C, C, D</p>
 
 <p>
   <style type="text/css">
