--- a/u2s10.html
+++ b/u2s10.html
@@ -192,7 +192,7 @@
 <li>What percentage of two-liter bottles contain less than 1.85 liters?</li>
 <p class="solution">2.5%</p>
 <li>In a sample of 10,000 two-liter Coca-Cola bottles, how many would be expected to contain more than 2.35 liters?  (This is almost 1.5 cups above the advertised 2 liters)</li>
-<p class="solution">.0015*10,000 = 15 bottles</p>
+<p class="solution">\(.0015 \cdot 10000 = 15\) bottles</p>
 
 </ol>
 
@@ -215,10 +215,10 @@
 <li>Find the range in miles per gallon for 99.7% of Civic Hybrids.</li>
 <p class="solution">29 - 59 mpg</p>
 <li>In a sample of 500 Civic hybrids, how many would be expected to get between 39 and 49 miles per gallon on average?</li>
-<p class="solution">0.68 * 500 = 340 Honda Civic Hybrids</p>
+<p class="solution">\(0.68 \cdot 500 = 340\) Honda Civic Hybrids</p>
 
 <li>In a sample of 500 Civic hybrids, how many would be expected to get better than an average of 59 miles per gallon? </li>
-<p class="solution">0.0015 * 500 = 0.75</p>
+<p class="solution">\(0.0015 \cdot 500 = 0.75\)</p>
 <p class="solution">Less than one Honda Civic Hybrid per 500 Civics will get between 39 and 49 mpg.</p>
 
 </ol>
