--- a/u1s2.html
+++ b/u1s2.html
@@ -164,10 +164,10 @@
         <li>The jewelry store is having a 30% off sale.
             <ol>
                 <li> If the item regularly costs $180, what is the discount?
-                        <p class="solution"> \(0.30\cdot180=$54\) </p>
+                        <p class="solution"> \(0.30\cdot180=\$54\) </p>
                 </li>
                 <li> What is the sale price?
-                        <p class="solution"> \(180-54=$126\)</p>
+                        <p class="solution"> \(180-54=\$126\)</p>
                 </li>
             </ol>
          
