--- a/u1s3.html
+++ b/u1s3.html
@@ -211,11 +211,11 @@
                   <td class="tg-13pz">Rent: $600/month</td>
                 </tr>
                 <tr>
-                  <td class="tg-13pz">Student loan: $5000/year</td>
+                  <td class="tg-13pz">Student loan: $5000/year<p class="solution">$416.67/month</p></td>
                   <td class="tg-13pz">Groceries: $400/month</td>
                 </tr>
                 <tr>
-                  <td class="tg-13pz">Scholarship: $1000/year</td>
+                  <td class="tg-13pz">Scholarship: $1000/year<p class="solution">$83.33/month</p></td>
                   <td class="tg-13pz">Tuition and fees: $4000/year <p class="solution">$333.33/month</p></td>
                 </tr>
                 <tr>
