--- a/u2s10.html
+++ b/u2s10.html
@@ -186,7 +186,7 @@
 <li>What percentage of two-liter Coca-Cola bottles contain more than 2.05 liters?</li>
 <p class="solution">50%</p>
 <li>Find the range of liters that approximately 95% of all Coca-Cola bottles contain?</li>
-<p class="solution">1.85 - 2.25 liters</p>
+<p class="solution">1.85 to 2.25 liters</p>
 <li>What percentage of two-liter bottles contain between 1.85 and 2.15 liters?</li>
 <p class="solution">81.5%</p>
 <li>What percentage of two-liter bottles contain less than 1.85 liters?</li>
@@ -213,7 +213,7 @@
 <li>What percentage of Civic hybrids get between 29 and 39 miles per gallon?</li>
 <p class="solution">15.85%</p>
 <li>Find the range in miles per gallon for 99.7% of Civic Hybrids.</li>
-<p class="solution">29 - 59 mpg</p>
+<p class="solution">29 to 59 mpg</p>
 <li>In a sample of 500 Civic hybrids, how many would be expected to get between 39 and 49 miles per gallon on average?</li>
 <p class="solution">\(0.68 \cdot 500 = 340\) Honda Civic Hybrids</p>
 
