--- a/u2s4.html
+++ b/u2s4.html
@@ -168,8 +168,8 @@
 <p style="page-break-before: always"></p>
 <h4>TYPE OF STUDY: </h4>
 <ul>
-<li>Observational—observe or measure characteristics</li>
-<li>Experiment—apply treatment to some or all and observe the effects</li>
+<li>Observational: observe or measure characteristics</li>
+<li>Experiment: apply treatment to some or all and observe the effects</li>
 </ul>
 <ol>
 <li>Treatment group</li>
@@ -272,7 +272,7 @@
 <p>Type of Study</p>
 <p class="solution">Observational</p>
 <p>Confidence Interval</p>
-<p class="solution">66% - 72%</p>
+<p class="solution">66% to 72%</p>
 
 <p>Data for Rasmussen Reports survey research is collected using an automated polling methodology. Calls are placed to randomly-selected phone numbers through a process that ensures appropriate geographic representation. Typically, calls are placed from 5 pm to 9 pm local time during the week. Saturday calls are made from 11 am to 6 pm local time and Sunday calls from 1 pm to 9 pm local time. To reach those who have abandoned traditional landline telephones, Rasmussen Reports uses an online survey tool to interview randomly selected participants from a demographically diverse panel.</p>
 
