--- a/u2s6.html
+++ b/u2s6.html
@@ -151,22 +151,22 @@
             <td class="tg-13pz"><p class="solution">4%</p></td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">$45,000 - $50,000</th>
+            <th class="tg-13pz" scope="row">$45,000 to $50,000</th>
             <td class="tg-13pz"><p class="solution">15</p></td>
             <td class="tg-13pz"><p class="solution">30%</p></td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">$50,000 - $55,000</th>
+            <th class="tg-13pz" scope="row">$50,000 to $55,000</th>
             <td class="tg-13pz"><p class="solution">12</p></td>
             <td class="tg-13pz"><p class="solution">24%</p></td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">$55,000 - $60,000</th>
+            <th class="tg-13pz" scope="row">$55,000 to $60,000</th>
             <td class="tg-13pz"><p class="solution">7</p></td>
             <td class="tg-13pz"><p class="solution">14%</p></td>
           </tr>
           <tr>
-            <th class="tg-13pz" scope="row">$60,000 - $65,000</th>
+            <th class="tg-13pz" scope="row">$60,000 to $65,000</th>
             <td class="tg-13pz"><p class="solution">5</p></td>
             <td class="tg-13pz"><p class="solution">10%</p></td>
           </tr>
@@ -178,7 +178,7 @@
         </table>
 
     <li>Create a bar graph showing average teacher salaries.</li>
-    <p class="solution"><img src="images/u2s6p1.png"  width="55%" height="55%" alt="A bar graph of the average teacher salaries by state. The horizontal axis represents the salary ranges and the vertical axis represents the number of states in each range and goaes from 0 to 25 couning by 5. Ther are 2 states whose average salaries are less than $45,000. There are 15 states whose salaries are $45,000-$50,000. There are 12 states who salaries are $50,000-$55,000. There are 7 states whose salaries are $55,000-$60,000. There are 5 states whose salaries are $60,000-$65,000. There are 9 states who salaries are greater than $65,000."></p>
+    <p class="solution"><img src="images/u2s6p1.png"  width="55%" height="55%" alt="A bar graph of the average teacher salaries by state. The horizontal axis represents the salary ranges and the vertical axis represents the number of states in each range and goaes from 0 to 25 couning by 5. Ther are 2 states whose average salaries are less than $45,000. There are 15 states whose salaries are $45,000 to $50,000. There are 12 states who salaries are $50,000 to $55,000. There are 7 states whose salaries are $55,000 to $60,000. There are 5 states whose salaries are $60,000 to $65,000. There are 9 states who salaries are greater than $65,000."></p>
     <li>Create a bar graph showing starting teacher salaries. You will first need to create a frequency table.</li>
     <p class="solution"><img src="images/u2s6p2.png" width="55%" height="55%" alt="A bar graph of starting teacher salaries by state. The horizontal axis is the same range of salaries as in the previous problem. The vertical axis represents the number of states and goes from 0 to 60 counting by 10. There are 45 states whose starting teacher salaries are less than $45,000 per year. There are 4 states whose starting teacher salary is $45,000."></p>
 
