--- a/u2review.html
+++ b/u2review.html
@@ -246,11 +246,11 @@
         <ol>
             <li>0, 4, 6, 8 10 12</li>
             <li>No specific years are given.  This is just showing the trends.</li>
-            <li>The even years from 1960 – 2012</li>
-            <li>All of the years from 1960 – 2012</li>
+            <li>The even years from 1960 to 2012</li>
+            <li>All of the years from 1960 to 2012</li>
             <li>4, 6, 8, 10, 12</li>
         </ol>
-        <p class="solution">iv. All of the years from 1960 - 2012.</p>
+        <p class="solution">iv. All of the years from 1960 to 2012.</p>
         <li>In which year was the number of homicides the greatest?  </li>
         <p class="solution">1980</p>
         <li>How many homicides happened in 1964?  </li>
@@ -446,7 +446,7 @@
     <li>What type of study was this?</li>
     <p class="solution">observational</p>
     <li>If the margin of error was 3.5%, what is the confidence interval for the percentage of iMac purchasers who were new computer owners?</li>
-    <p class="solution">13.1% - 20.1%</p>
+    <p class="solution">13.1% to 20.1%</p>
     <li>After one year and the sale of 2,000,000 iMacs, Apple reported that one third of the new buyers of iMacs are first-time computer buyers.  Is this within the confidence interval?</li>
     <p class="solution">No</p>
     <li>Is this sampling error or might there be other factors at work here?</li>
@@ -480,7 +480,7 @@
         <li>About what percent of people who are not sick have a body temperature between 97.58 degrees and 99.44 degrees?</li>
         <p class="solution">81.5%</p>   
         <li>What is the range of body temperatures for 99.7% of people who are not sick?</li>
-        <p class="solution">96.34 - 100.06 degrees Fahrenheit</p>   
+        <p class="solution">96.34 to 100.06 degrees Fahrenheit</p>   
         <li>In a population of 1 million people, how many people will have a normal body temperature between 97.58 – 98.82 degrees?</li>
         <p class="solution">680,000 people</p>   
     </ol>
