--- a/u2s3.html
+++ b/u2s3.html
@@ -158,6 +158,7 @@
 </ol>
 
 </li>
+<p style="page-break-before: always"></p>
 
 <li>Katie is planning to play Putt Putt with her friends. The Putt Putt course in her town charges $8.00 to rent a club and ball but then only $3.00 for every 18-hole game she golfs. The equation that models this situation is \(y=8.00+3.00x\) where x represents the number of games played and y represents the total cost for Katie to golf.  A table of values and a graph for this problem are pictured below.</p>
 
