--- a/u2s6.html
+++ b/u2s6.html
@@ -376,6 +376,8 @@
 
 </ol>
 
+<p style="page-break-before: always"></p>
+
 <h4>Part 4: States in Region with Income Tax</h4>
 
 <ol>
@@ -447,16 +449,8 @@
 
 <p>To edit the axis numbering on a graph, click on your graph.  Then from the drop down menu in the upper left corner of Excel, select Vertical (Value) Axis.  Click Format Selection right under the drop down menu.  In the box that opens on the right side of your screen, click on the picture of the histogram.  Then edit the numbers accordingly.  You can also edit the Horizontal Axis if needed.</p>
 
-
-
-
-
-
     </main>
-
-
-
-    <!--end of container div -->
+  <!--end of container div -->
   </div>
 
   <script type="text/javascript"
