fix titles in nav bars

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             <p> <strong><a class="dropdown-item" href="u3s3.html" target="_blank">3.3 Dimensional Analysis</a></strong> </p>
             <p> <strong><a class="dropdown-item" href="u3s4.html" target="_blank">3.4 Problem Solving with Units</a></strong> </p>
             <p> <strong><a class="dropdown-item" href="u3s5.html" target="_blank">3.5 Perimeter and Area</a></strong> </p>
-            <p> <strong><a class="dropdown-item" href="u3s6.html" target="_blank">3.6 Volume and Surface Area</a></strong> </p>
-            <p> <strong><a class="dropdown-item" href="u3s7.html" target="_blank">3.7 Perimeter, Area, Volume and Surface Area</a></strong> </p>
+            <p> <strong><a class="dropdown-item" href="u3s6.html" target="_blank">3.6 Perimeter, Area, and Surface Area</a></strong> </p>
+            <p> <strong><a class="dropdown-item" href="u3s7.html" target="_blank">3.7 Surface Area and Volume</a></strong> </p>
             <p> <strong><a class="dropdown-item" href="u3review.html" target="_blank">Unit 3 Review</a></strong> </p>
 
 
