edits for F20 packet

--- a/u1review.html
+++ b/u1review.html
@@ -309,6 +309,16 @@
 
 </p>
 
+<li>You flip a fair coin.  What is the probability of getting heads?
+  <inline class="solution">\(\frac12\) </inline>  
+</li>
+<li>Sam is going to call one person from his contacts at random. He has 40 total contacts. 22 of those contacts are people he met at summer camp. What is the probability that he calls a person from camp?
+  <inline class="solution">\(\frac{11}{20}\) </inline>  
+</li>
+<li>You randomly draw a marble from a bag of marbles that contains 3 blue marbles, 4 green marbles, and 5 red marbles. What is the probability that you draw a green marble?
+  <inline class="solution">\(\frac13\) </inline>  
+</li>
+
 </ol>
 
 
