--- a/u1s11.html
+++ b/u1s11.html
@@ -189,7 +189,7 @@
           </tr>
           <tr>
             <th class="tg-13pz" scope="row">22%</th>
-            <td class="tg-13pz">$38,701 to $82,500<br><p class="solution">upper number is changed to $46,200</p></td>
+            <td class="tg-13pz">$38,701 to $82,500<br><inline class="solution">upper number is changed to $46,200</inline></td>
             <td class="tg-13pz"><p class="solution">$7,500</p></td>
             <td class="tg-13pz"><p class="solution">$1,650.00</p></td>
           </tr>
@@ -224,12 +224,7 @@
             <td class="tg-13pz"></td>
             <td class="tg-13pz"><p class="solution">$6,103.50</p></td>
           </tr>
-          <tr>
-            <td class="tg-13pz"></td>
-            <td class="tg-13pz"></td>
-            <td class="tg-13pz"></td>
-            <td class="tg-13pz"></td>
-          </tr>
+      
           <tr>
             <th class="tg-13pz" scope="row">Standard<br>Deduction</th>
             <td class="tg-13pz">$12,000</td>
