--- a/u1s6.html
+++ b/u1s6.html
@@ -348,9 +348,7 @@
                 </li>
             </ol>
             <p style="page-break-before: always"></p>
-          <h4> Group Work</h4> 
-
-            <b>Please work each problem with the help of your group members. Be sure everyone in the group has completed all problems, answered all questions and understands the answers before moving on to the next problem.</b>
+        
         
                 </li>
         <li>Phyllis has been saving money for a long time to take a vacation with her daughter. After many months, she has saved $1875. She wants to spend her money wisely to make it stretch throughout the entire vacation, so she plans to spend $150 per day. 
@@ -472,6 +470,7 @@
               <p class="solution">The company started going into debt 14 months ago.</p>
            </li>
           </ol>
+          <p style="page-break-before: always"></p>
           <h4>Solve for the variable.  Show all your steps.</h4>
         </li>
         <div class="row">
