--- a/u3fs.html
+++ b/u3fs.html
@@ -218,11 +218,11 @@
     <div class="row">
       <div class="col-sm-4">
 
-    <p>1 meter = 1000 millimeters</p>
-    <p>1 meter = 100 centimeters</p>
-    <p>1 kilometer = 1000 meters</p>
+    <p>1 m, L, g = 1000 milli(m, L, g)</p>
+    <p>1 m, L, g = 100 centi(m, L, g)</p>
+    <p>1 kilo(m, L, g) = 1000 m, L, g</p>
 
-    <p>1 kilogram = 1000 grams</p>
+    <p>10 milli(m, L, g) = 1 centi(m, L, g)</p>
       </div>
   <div class="col-sm-4">
 
