--- a/u1s5.html
+++ b/u1s5.html
@@ -184,7 +184,7 @@
             <p class="solution">\(64 \pi\)</p>
             <p class="solution">\(201.0619\)</p></li>
 
-        <li>\(\frac{4}{3} \pi \left (7.5)^{3}\right)\)
+        <li>\(\frac{4}{3} \pi \left (7.5)^{3}\right)
             <p class="solution"> \(\frac{4}{3} \pi \left(421.875\right)\)</p>
             <p class="solution">\(562.5 \pi\)</p>
             <p class="solution">\(1767.1459\)</p></li>
