--- a/u2s9.html
+++ b/u2s9.html
@@ -352,9 +352,8 @@
   <li><img src="images/u2s9p8c.png" alt="The scale on the Box and Whisker plot is from 2 to 20 counting by 2. The low number is 5, the quartile 1 number is 8, the median is 14, the quartile 3 number is 16 and the high number is 19."> </li>
   <li><img src="images/u2s9p8d.png" alt="The scale on the Box and Whisker plot is from 2 to 20 counting by 2. The low number is 5, the quartile 1 number is 8, the median is 12, the quartile 3 number is 17 and the high number is 19. "> </li>
 
-  
 </ol>
-<p class="solution">b.</p>
+<p class="solution">b</p>
 </li>
     </ol>  
 
