--- a/u2s9.html
+++ b/u2s9.html
@@ -347,7 +347,7 @@
 
 <li>The data set 5, 6, 7, 8, 9, 9, 9, 10, 12, 14, 17, 17, 18, 19, 19 represents the number of hours spent on the Internet in a week by students in a mathematics class. Which box-and-whisker plot represents the data?
 <ol>
-  <li><img src="images/u2s9p8a.png" alt="The scale on the Box and Whisker Plot goes from 2 to 20 counting by 2. The low number is 2, the quartile 1 number is 8, the median is 12, the quartile 3 number is 17 and the high number is 19."> </li>
+  <li><img src="images/u2s9p7.png" alt="The scale on the Box and Whisker Plot goes from 2 to 20 counting by 2. The low number is 2, the quartile 1 number is 8, the median is 12, the quartile 3 number is 17 and the high number is 19."> </li>
   <li><img src="images/u2s9p8b.png" alt="The scale on the Box and Whisker plot is from 2 to 20 counting by 2. The low number is 5, the quartile 1 number is 8, the median is 10, the quartile 3 number is 17 and the high number is 19."> </li>
   <li><img src="images/u2s9p8c.png" alt="The scale on the Box and Whisker plot is from 2 to 20 counting by 2. The low number is 5, the quartile 1 number is 8, the median is 14, the quartile 3 number is 16 and the high number is 19."> </li>
   <li><img src="images/u2s9p8d.png" alt="The scale on the Box and Whisker plot is from 2 to 20 counting by 2. The low number is 5, the quartile 1 number is 8, the median is 12, the quartile 3 number is 17 and the high number is 19. "> </li>
