--- a/u2s8.html
+++ b/u2s8.html
@@ -162,7 +162,7 @@
             <td class="tg-13pz"> <a href="https://www.forbes.com/profile/lionel-messi/?list=athletes#4929b14e5e9f" target="_blank">Lionel Messi</a></td>
             <td class="tg-13pz">$111 M</td>
             <td class="tg-13pz">$84 M</td>
-            <td class="tg-13pz">$ 27</td>
+            <td class="tg-13pz">$27 M</td>
             <td class="tg-13pz">Soccer</td>
           </tr>
           <tr>
