--- a/u3fs.html
+++ b/u3fs.html
@@ -235,6 +235,7 @@
     <p>1 gallon = 4 quarts</p>
     <p>1 quart = 2 pints</p>
     <p>1 pint = 2 cups</p>
+    <p>1 cup = 8 ounces</p>
   </div>
 
   <div class="col-sm-4">
