--- a/u3fs.html
+++ b/u3fs.html
@@ -263,8 +263,10 @@
 
   </div>
                           </div>
-     <p> \( \begin{equation} F = \frac{9}{5} C + 32 \end{equation} \) </p>      
-     <p> \( \begin{equation} C = \frac{5}{9} (F - 32) \end{equation} \) </p>
+     <p> \( \begin{equation} F = \frac{9}{5} C + 32 \end{equation} \)     \&nbsp; \&nbsp; \&nbsp;
+
+ 
+     \( \begin{equation} C = \frac{5}{9} (F - 32) \end{equation} \) </p>
      
     </main>
 
