--- a/u3fs.html
+++ b/u3fs.html
@@ -263,7 +263,7 @@
 
   </div>
                           </div>
-     <p> \( \begin{equation} F = \frac{9}{5} C + 32 \end{equation} \)     \&nbsp; \&nbsp; \&nbsp;
+     <p> \( \begin{equation} F = \frac{9}{5} C + 32 \end{equation} \)     &nbsp; &nbsp; &nbsp;
 
  
      \( \begin{equation} C = \frac{5}{9} (F - 32) \end{equation} \) </p>
